hphp/hack/test/typecheck/functional_higher_order.php.like_types.exp
File "functional_higher_order.php", line 18, characters 5-47:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
